--- a/en/trans/lyTextregionen.dita
+++ b/en/trans/lyTextregionen.dita
@@ -4,8 +4,10 @@
 <title>Page Regions</title>
 <body>
         <p>On one page there are structurally and contentwise different regions. Once the print
-            space has been determined and labelled, the layout is analyzed. Different regions have
-            to be distinguished and labelled as such:</p>
+                        space has been viewed or marked in <xref
+                                href="../../de/trans/structur_gtlevel1.dita">capture level 3
+                                (structure GT level)</xref>, the layout is analyzed. Different
+                        regions have to be distinguished and labelled as such:</p>
 <ul id="ul_uxc_wdj_r1b">
 <li><xref href="lytextregion.dita#textregionen__textregion_">Text region</xref> : TextRegion, </li>
 <li><xref href="lyBildbereiche.dita#lyBildbereiche">Illustrations, photos</xref> : ImageRegion,</li>
