--- a/de/trans/lyLeserichtung.dita
+++ b/de/trans/lyLeserichtung.dita
@@ -3,33 +3,37 @@
 <topic id="lyLeserichtung">
     <title>Leserichtung (ReadingOrder)</title>
     <body>
-       
-<p>Um inhaltliche und formale Zusammenhänge nicht zu zerreißen, werden Regionen auf <b>einer
+        <p>Um inhaltliche und formale Zusammenhänge nicht zu zerreißen, werden Regionen auf <b>einer
                 Seite</b> mit einer ReadingOrder (Leserichtung) geordnet und gruppiert. Eine
             ReadingOrder besteht ausschließlich nur zwischen <b>Regionen</b>. Mit einer ReadingOrder
             wird eine Ordnung von Regionen festgelegt. Die Leserichtung in einer Zeile wird nur
             durch die Reihenfolge der einzelnen Word-Elemente bestimmt, eine explizite Auszeichnung
             ist nicht vorgesehen. </p>
-        
         <section>
             <title>Festlegung der Leserichtung</title>
-        <p>Die Festlegung erfolgt pragmatisch. Das bedeutet:</p>
-        <ul id="ul_op1_rhp_ktb">
-            <li>die Regionen einer Seite sind zunächst von links nach rechts (bei linksläufigen
+            <p>Die Festlegung erfolgt pragmatisch. Das bedeutet:</p>
+            <ul id="ul_op1_rhp_ktb">
+                <li>die Regionen einer Seite sind zunächst von links nach rechts (bei linksläufigen
                     Schriften rechts nach links) </li>
-            <li>und von oben nach unten unter Beachtung einer Spaltenaufteilung zu ordnen.</li>
-            <li>Fußnoten, Endnoten sind in der Regel nach den Regionen wie Absätze zu zuordnen.</li>
-            <li>Regionen, die sich außerhalb des <xref href="lySatzspiegel.dita"
+                <li>und von oben nach unten unter Beachtung einer Spaltenaufteilung zu ordnen.</li>
+                <li>Fußnoten, Endnoten sind in der Regel nach den Regionen wie Absätze zu
+                    zuordnen.</li>
+                <li>Regionen, die sich außerhalb des <xref href="lySatzspiegel.dita"
                         >Satzspiegels</xref> befinden wie Marginalien, Kustoden und Bogensignaturen,
                     sind immer nach den Regionen wie Überschriften, Absätze oder Fußnoten zu
                     betrachten und zu zuordnen.</li>
-        </ul></section>
+            </ul>
+        </section>
         <section>
             <title>Page-Kodierung</title>
-            <p>Die Angabe der ReadingOrder erfolgt mit dem Element <codeph>&lt;ReadingOrder></codeph>. </p>
-            <p><ul id="ul_j2l_lx1_vfb"><li>Handelt es sich um in Beziehung stehende Elemente (z. B. bei einer Überschrift und dem dazu
-                        folgenden Absatz), ist die Leserichtung vom Typ „geordnet“. In diesem Fall
-                        ist das Element <codeph>&lt;OrderedGroup&gt;</codeph> zu verwenden.<ul
+            <p>Die Angabe der ReadingOrder erfolgt mit dem Element
+                    <codeph>&lt;ReadingOrder></codeph>. </p>
+            <p>
+                <ul id="ul_j2l_lx1_vfb">
+                    <li>Handelt es sich um in Beziehung stehende Elemente (z. B. bei einer
+                        Überschrift und dem dazu folgenden Absatz), ist die Leserichtung vom Typ
+                        „geordnet“. In diesem Fall ist das Element
+                            <codeph>&lt;OrderedGroup&gt;</codeph> zu verwenden.<ul
                             id="ul_qzf_chp_ktb">
                             <li>Durch eine laufende Nummerierung (beginnend bei Null) wird die
                                 Leserichtung bei einer „geordneten“ Leserichtung indiziert und
@@ -44,12 +48,24 @@
                                     format="html"> Beispiel für eine ReadingOrder/OrderedGroup
                                 </xref>
                             </li>
+                                <li>
+                                    <fig>
+                                    <title>linke Seite</title>
+                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml</desc>
+                                        <image href="images/lyLeserichtung_links.png"
+                                            id="image_l22_w2n_ytb"/>
+                                    </fig></li>
+                                    <li><fig>
+                                    <title>rechte Seite</title>
+                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0013.xml</desc>
+                                </fig><image href="images/lyLeserichtung_rechts.png"
+                                    id="image_ncr_hfn_ytb"/></li>
                         </ul></li>
-                <li>Handelt es sich um gleichberechtigte Elemente (z. B. bei Werbung), die für sich
-                        allein stehen kann, ist die Leserichtung vom Typ „ungeordnet“. In diesem
-                        Fall ist das Element <codeph>&lt;UnorderedGroup&gt;</codeph> zu
+                    <li>Handelt es sich um gleichberechtigte Elemente (z. B. bei Werbung), die für
+                        sich allein stehen kann, ist die Leserichtung vom Typ „ungeordnet“. In
+                        diesem Fall ist das Element <codeph>&lt;UnorderedGroup&gt;</codeph> zu
                             verwenden.<ul id="ul_z5m_chp_ktb">
-                            <li>Bei der „ungeordneten“ Leserichung wird <b>keine</b> Indizierung
+                            <li>Bei der „ungeordneten“ Leserichtung wird <b>keine</b> Indizierung
                                 vorgenommen.
                                 <codeblock id="codeblock_hhn_hz4_ktb" outputclass="language-xml">&lt;ReadingOrder>
   &lt;UnorderedGroup id="ro_1542194237187" caption="Regions reading order">
@@ -57,18 +73,54 @@
       &lt;RegionRef regionRef="r_2"/>
   &lt;/UnorderedGroup>
 &lt;/ReadingOrder></codeblock></li>
+                        </ul></li><li>In einigen Fällen ist auch eine Mischform von <i>ungeordnet</i> und <i>geordnet</i> möglich.
+                        Innerhalb eines Anzeigenteils einer Zeitung sind die einzelnen Anzeigen
+                            <i>ungeordnet</i>. Aber innerhalb der Anzeige kann davon ausgegangen
+                        werden, das u.a. Abstätze, Grafiken in geordneten Beziehungen zu einander
+                        stehen. <ul id="ul_g3q_wy4_ytb">
+                            <li>
+                                <codeblock id="codeblock_f15_dz4_ytb" outputclass="language-xml">&lt;ReadingOrder>
+	&lt;UnorderedGroup id="ab1">
+		&lt;UnorderedGroup id="ug19">
+			&lt;OrderedGroup id="og19">
+				&lt;OrderedGroupIndexed id="g19" index="0">
+					&lt;RegionRefIndexed regionRef="r2" index="0"/>
+					&lt;RegionRefIndexed regionRef="r71" index="1"/>
+				&lt;/OrderedGroupIndexed>
+			&lt;/OrderedGroup>
+		&lt;/UnorderedGroup>
+		&lt;UnorderedGroup id="ug6">
+			&lt;OrderedGroup id="og6">
+				&lt;OrderedGroupIndexed id="g6" index="1">
+					&lt;RegionRefIndexed regionRef="r4" index="0"/>
+					&lt;RegionRefIndexed regionRef="r5" index="1"/>
+				&lt;/OrderedGroupIndexed>
+			&lt;/OrderedGroup>
+		&lt;/UnorderedGroup>
+	&lt;/UnorderedGroup>
+&lt;/ReadingOrder>
+</codeblock>
+                            </li>
+                            <li><fig>
+                                    <title>Mischform von ungeordneter und geordneter Leserichtung</title>
+                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/werbung/GT-PAGE/werbung_unordered.xml</desc>
+                                </fig><image href="images/lyLeserichtung_misch.jpg" scale="50"
+                                    id="image_yxj_y2p_ytb"/></li>
                         </ul></li>
-            </ul></p>
+                </ul>
+            </p>
         </section>
-        
-
-        
-        
-        <example><title>Bildbeispiele</title>
-<p><image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb"/></p>
-<p><image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb"/></p>
-            <p><image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb"/></p>
+        <example>
+            <title>Bildbeispiele</title>
+            <fig><title>Mehrere Spaltenabschnitte<image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb" scale="50"/></title></fig>
+            <fig><title>Rechte Seite mit Marginalien<image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb" scale="50"/></title></fig>
+            <fig><title>Spalten mit Abbildungen<image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb" scale="50"/></title></fig>
         </example>
+       
+        
+        
+        
+        
     </body>
     <related-links>
         <link href="structur_gtlevel1.dita"/>
