Typo: Transkribtion -> Transkription

--- a/de/trans/level_2_und_3_2.dita
+++ b/de/trans/level_2_und_3_2.dita
@@ -7,7 +7,7 @@
 LETTER R ROTUNDA)</tt>. Es findet sich häufig in Zusammenhang mit dem heute gebräuchlichen
 <tt>r</tt> oder als <tt>et</tt>-Substituent in Abkürzungen für <tt>et cetera</tt>. </p>
         <table id="table_k2t_dwp_mbb" outputclass="guidelines">
-<title>Beispiele für die Transkribtion des runden <tt>r</tt> im Level 2-3 :</title>
+<title>Beispiele für die Transkription des runden <tt>r</tt> im Level 2-3 :</title>
 <tgroup cols="2">
 <thead>
 <row>
