--- a/de/trans/exif_pagexml_konkordanz.dita
+++ b/de/trans/exif_pagexml_konkordanz.dita
@@ -37,15 +37,15 @@ scope="external"/>)</stentry>
 <strow>
 <stentry>0x011a</stentry>
 <stentry>XResolution</stentry>
+<stentry><b>page/imageXResolution</b></stentry>
 <stentry/>
-<stentry>page/@XResolution</stentry>
 <stentry>Specifies the image resolution in width.</stentry>
 </strow>
 <strow>
 <stentry>0x011b</stentry>
 <stentry>YResolution</stentry>
+<stentry><b>page/imageYResolution</b></stentry>
 <stentry/>
-<stentry>page/@YResolution</stentry>
 <stentry>Specifies the image resolution in height.</stentry>
 </strow>
 <strow>
@@ -65,8 +65,8 @@ scope="external"/>)</stentry>
 <strow>
 <stentry>0x0128</stentry>
 <stentry>ResolutionUnit</stentry>
+<stentry><b>page/imageResolutionUnit</b></stentry>
 <stentry/>
-<stentry>page/@ResolutionUnit</stentry>
 <stentry>Specifies the unit of the resolution information referring to a standardized unit of
 measurement (e.g., pixel, centimeter etc.).</stentry>
 </strow>
