--- a/en/trans/exif_pagexml_konkordanz.dita
+++ b/en/trans/exif_pagexml_konkordanz.dita
@@ -4,73 +4,73 @@
     <title>Exif-PageXML Konkordanz</title>
     <body>
         <p>
-<simpletable frame="all" relcolwidth="1* 1* 1* 1* 1.0*" id="simpletable_mbk_gwd_bcb">
-<sthead>
-<stentry>Exif Tag ID</stentry>
-<stentry>Exif</stentry>
-<stentry>PageXML (<xref href="https://github.com/PRImA-Research-Lab/PAGE-XML" format="html"
-scope="external"/>)</stentry>
-<stentry>Recommendation</stentry>
-<stentry>Documentation</stentry>
-</sthead>
-<strow>
-<stentry>0xc573</stentry>
-<stentry>OriginalFileName</stentry>
-<stentry><b>page/@imageFilename</b></stentry>
-<stentry/>
-<stentry>Contains the image file name including the file extension.</stentry>
-</strow>
-<strow>
-<stentry>0x0100</stentry>
-<stentry>ImageWidth</stentry>
-<stentry><b>page/@imageWidth</b></stentry>
-<stentry/>
-<stentry>Specifies the width of the image.</stentry>
-</strow>
-<strow>
-<stentry>0x0101</stentry>
-<stentry>ImageHeight</stentry>
-<stentry><b>page/@imageHeight</b></stentry>
-<stentry/>
-<stentry>Specifies the height of the image.</stentry>
-</strow>
-<strow>
-<stentry>0x011a</stentry>
-<stentry>XResolution</stentry>
-<stentry/>
-<stentry>page/@XResolution</stentry>
-<stentry>Specifies the image resolution in width.</stentry>
-</strow>
-<strow>
-<stentry>0x011b</stentry>
-<stentry>YResolution</stentry>
-<stentry/>
-<stentry>page/@YResolution</stentry>
-<stentry>Specifies the image resolution in height.</stentry>
-</strow>
-<strow>
-<stentry>0x0103</stentry>
-<stentry>Compression</stentry>
-<stentry/>
-<stentry>page/@Compression</stentry>
-<stentry>Indicates whether the image is compressed and the type of compression applied.</stentry>
-</strow>
-<strow>
-<stentry>0x0106</stentry>
-<stentry>PhotometricInterpretation</stentry>
-<stentry/>
-<stentry>page/@PhotometricInterpretation</stentry>
-<stentry>Specifies color space and/or model of the image.</stentry>
-</strow>
-<strow>
-<stentry>0x0128</stentry>
-<stentry>ResolutionUnit</stentry>
-<stentry/>
-<stentry>page/@ResolutionUnit</stentry>
-<stentry>Specifies the unit of the resolution information referring to a standardized unit of
-measurement (e.g., pixel, centimeter etc.).</stentry>
-</strow>
-</simpletable>
+        <simpletable frame="all" relcolwidth="1* 1* 1* 1* 1.0*" id="simpletable_mbk_gwd_bcb">
+        <sthead>
+            <stentry>Exif Tag ID</stentry>
+            <stentry>Exif</stentry>
+            <stentry>PageXML (<xref href="https://github.com/PRImA-Research-Lab/PAGE-XML" format="html"
+                scope="external"/>)</stentry>
+            <stentry>Recomendation</stentry>
+            <stentry>Documentation</stentry>
+        </sthead>
+        <strow>
+            <stentry>0xc573</stentry>
+            <stentry>OriginalFileName</stentry>
+            <stentry><b>page/@imageFilename</b></stentry>
+            <stentry/>
+            <stentry>Contains the image file name including the file extension.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x0100</stentry>
+            <stentry>ImageWidth</stentry>
+            <stentry><b>page/@imageWidth</b></stentry>
+            <stentry/>
+            <stentry>Specifies the width of the image.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x0101</stentry>
+            <stentry>ImageHeight</stentry>
+            <stentry><b>page/@imageHeight</b></stentry>
+            <stentry/>
+            <stentry>Specifies the height of the image.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x011a</stentry>
+            <stentry>XResolution</stentry>
+            <stentry><b>page/imageXResolution</b></stentry>
+            <stentry/>
+            <stentry>Specifies the image resolution in width.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x011b</stentry>
+            <stentry>YResolution</stentry>
+            <stentry><b>page/imageYResolution</b></stentry>
+            <stentry/>
+            <stentry>Specifies the image resolution in height.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x0103</stentry>
+            <stentry>Compression</stentry>
+            <stentry/>
+            <stentry>page/@Compression</stentry>
+            <stentry>Indicates whether the image is compressed and the type of compression applied.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x0106</stentry>
+            <stentry>PhotometricInterpretation</stentry>
+            <stentry/>
+            <stentry>page/@PhotometricInterpretation</stentry>
+            <stentry>Specifies color space and/or model of the image.</stentry>
+        </strow>
+        <strow>
+            <stentry>0x0128</stentry>
+            <stentry>ResolutionUnit</stentry>
+            <stentry><b>page/imageResolutionUnit</b></stentry>
+            <stentry/>
+            <stentry>Specifies the unit of the resolution information referring to a standardized unit of
+                measurement (e.g., pixel, centimeter etc.).</stentry>
+        </strow>
+    </simpletable>
 </p>
     </body>
 </topic>
