--- a/de/trans/lyLeserichtung.dita
+++ b/de/trans/lyLeserichtung.dita
@@ -51,15 +51,18 @@
                                 <li>
                                     <fig>
                                     <title>linke Seite</title>
-                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml</desc>
-                                        <image href="images/lyLeserichtung_links.png"
-                                            id="image_l22_w2n_ytb"/>
-                                    </fig></li>
+                                        <desc><xref scope="external" format="html"
+                                            href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml">erasmus_testamenti_1523_0012.xml</xref></desc>
+                                    <image href="images/lyLeserichtung_links.png"
+                                        id="image_l22_w2n_ytb" scale="50"/>
+                                </fig></li>
                                     <li><fig>
                                     <title>rechte Seite</title>
-                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0013.xml</desc>
-                                </fig><image href="images/lyLeserichtung_rechts.png"
-                                    id="image_ncr_hfn_ytb"/></li>
+                                        <desc><xref scope="external" format="html"
+                                            href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0013.xml">erasmus_testamenti_1523_0013.xml</xref></desc>
+                                    <image href="images/lyLeserichtung_rechts.png"
+                                        id="image_ncr_hfn_ytb" scale="50"/>
+                                </fig></li>
                         </ul></li>
                     <li>Handelt es sich um gleichberechtigte Elemente (z. B. bei Werbung), die für
                         sich allein stehen kann, ist die Leserichtung vom Typ „ungeordnet“. In
@@ -103,18 +106,28 @@
                             </li>
                             <li><fig>
                                     <title>Mischform von ungeordneter und geordneter Leserichtung</title>
-                                    <desc>https://github.com/tboenig/gt-guideline-examples/blob/main/data/werbung/GT-PAGE/werbung_unordered.xml</desc>
-                                </fig><image href="images/lyLeserichtung_misch.jpg" scale="50"
-                                    id="image_yxj_y2p_ytb"/></li>
+                                <desc><xref scope="external" format="html"
+                                    href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/werbung/GT-PAGE/werbung_unordered.xml">werbung_unordered.xml</xref></desc>
+                                <image href="images/lyLeserichtung_misch.jpg" scale="50"
+                                    id="image_yxj_y2p_ytb"/></fig></li>
                         </ul></li>
                 </ul>
             </p>
         </section>
         <example>
             <title>Bildbeispiele</title>
-            <fig><title>Mehrere Spaltenabschnitte<image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb" scale="50"/></title></fig>
-            <fig><title>Rechte Seite mit Marginalien<image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb" scale="50"/></title></fig>
-            <fig><title>Spalten mit Abbildungen<image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb" scale="50"/></title></fig>
+            <ul id="ul_uhs_bxz_l5b">
+                <li><fig><title>Mehrere Spaltenabschnitte</title><image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb"
+                        scale="60"/></fig></li>
+                <li><fig><title>Rechte Seite mit Marginalien</title><image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb"
+                        scale="60"/></fig></li>
+                <li><fig><title>Spalten mit Abbildungen</title><image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb"
+                        scale="60"/></fig></li>
+                
+            </ul>
+            
+            
+            
         </example>
        
         
