--- a/de/trans/sprache.dita
+++ b/de/trans/sprache.dita
@@ -4,7 +4,9 @@
     <title>Sprache</title>
     <body>
         <p>Die Angabe der Sprache ist auf folgenden Ebenen möglich, die durch entsprechende Elemente
-            repräsentiert werden.<table frame="all" rowsep="1" colsep="1" id="table_r34_hly_l5b">
+            repräsentiert werden.</p>
+
+<p><table frame="all" rowsep="1" colsep="1" id="table_r34_hly_l5b">
                 <title>Möglichkeiten der Sprachangabe bezogen auf Ebenen oder
                     PAGE-XML-Elemente</title>
                 <tgroup cols="3">
@@ -45,29 +47,35 @@
         <p>Unterschieden wird zwischen der <i>language</i> (Sprache),<i>primary language</i> (Erst-
             oder Hauptsprache) und der <i>secondary language</i> (Zweit- oder Nebensprache).
                 <i>language</i>, <i>primary language</i> und <i>secondary language</i> sind
-            Attribute (siehe Tabelle).</p>
-        <p>Die Werte der Attribute werden vom PAGE-XML-Schema vorgegeben. Sie entsprechen der <b>ISO
-                639</b> zur Kennzeichnung von Sprachen. Angegeben wird nicht ein Kürzel, sondern die
-            von der ISO normierte Sprachbezeichnung. </p>
-        <note type="tip" importance="high">Da die Sprachangabe auf verschiedenen Ebenen möglich ist, gilt folgende
-            Regelung, untergeordnete Ebene haben Vorrang vor der Angabe der höheren Ebene.</note>
+            Attribute (siehe <xref href="#sprache/table_r34_hly_l5b">Tabelle</xref>).</p>
+        <p>Die Werte der Attribute werden vom PAGE-XML-Schema vorgegeben. Sie entsprechen der
+                    <b><xref href="https://de.wikipedia.org/wiki/ISO_639" format="html"
+                    scope="external">ISO 639</xref></b> zur Kennzeichnung von Sprachen. Angegeben
+            wird nicht ein Kürzel, sondern die von der ISO normierte Sprachbezeichnung. </p>
+        <note type="remember">Da die Sprachangaben auf verschiedenen Ebenen möglich sind, gilt
+            folgende Regelung, untergeordnete Ebenen haben Vorrang vor der Angabe der höheren
+            Ebenen.</note>
         
 <section>
     <title>Page : Seite</title>
             <ul id="ul_lmv_hsz_l5b">
                 <li><codeph>&lt;Page primaryLanguage="German" secondaryLanguage="Latin"></codeph>
-                    <fig><title>Beispielseite mit zwei Sprachen</title><desc><xref scope="external"
-                        href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
-                        format="html">nn_auszug_1701_061.xml</xref>
-                    </desc><image href="images/sprache_page.png" id="image_bzf_cry_l5b" scale="50"/></fig>
-                    <note type="tip" importance="high">Auf dieser Seite werden nur zwei Sprachen verwendet, aus
+                    <fig>
+                        <title>Beispielseite mit zwei Sprachen</title>
+                        <desc><xref scope="external"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
+                                format="html">nn_auszug_1701_061.xml</xref>
+                        </desc>
+                        <image href="images/sprache_page.png" id="image_bzf_cry_l5b" scale="50"/>
+                    </fig>
+                    <note type="remember">Auf dieser Seite werden nur zwei Sprachen verwendet, aus
                         diesem Grund kann die Haupt- und Nebensprache (<i>@primaryLanguage,
-                            @secondaryLanguage</i>) angegebene werden.</note></li>
+                            @secondaryLanguage</i>) angegeben werden.</note></li>
                 <li><codeph>&lt;Page primaryLanguage="German"></codeph><fig><title>Beispielseite mit vier Sprachen</title><desc><xref scope="external"
                     href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/zesen_assenat_1670/GT-PAGE/zesen_assenat_1670_0382.xml"
                     format="html">zesen_assenat_1670_0382.xml</xref></desc><image
                             href="images/sprache_page2.png" id="image_td2_4sz_l5b" scale="50"
-                    /></fig><note type="tip" importance="high">Auf dieser Seite werden vier Sprachen (Deutsch,
+                    /></fig><note type="remember">Auf dieser Seite werden vier Sprachen (Deutsch,
                         Latein, Griechisch, Hebräisch) verwendet. Die Hauptsprache ist Deutsch, sie
                         wird angegeben. Die weiteren Sprachen werden auf der Wort-Ebene angegeben.
                         Wenn keine Wortsegmentierung verfügbar ist, wird empfohlen, die Angabe der
@@ -101,7 +109,7 @@
                         href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
                         format="html">nn_auszug_1701_061.xml</xref></desc><image
                         href="images/sprache_line.png" id="image_mvz_sqy_l5b" scale="50"/></fig>
-                    <note type="tip" importance="high">Im Beispiel ist zu sehen, dass sowohl deutsch als auch
+                    <note type="remember">Im Beispiel ist zu sehen, dass sowohl deutsch als auch
                         lateinische Worte in der Zeile vorhanden sind. Es wird nur die Hauptsprache
                             <i>primaryLanguage</i> angegeben. Die Angabe einer secondaryLanguage ist
                         nicht möglich. </note></li>
