--- a/de/trans/sprache.dita
+++ b/de/trans/sprache.dita
@@ -86,23 +86,34 @@
             <title>TextRegion : Region</title>
             <ul id="ul_obx_l5z_l5b">
                 <li><codeph>&lt;TextRegion primaryLanguage="Latin"></codeph>
-                    <fig><title>Textregion mit einer Sprache</title><desc><xref scope="external"
-                        href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
-                        format="html">nn_auszug_1701_061.xml</xref></desc><image href="images/sprache_region.png" id="image_skm_ksy_l5b" scale="50"/></fig></li>
+                    <fig>
+                        <title>Textregion mit einer Sprache</title>
+                        <desc><xref scope="external"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
+                                format="html">nn_auszug_1701_061.xml</xref></desc>
+                        <image href="images/sprache_region.png" id="image_skm_ksy_l5b" scale="40"/>
+                    </fig></li>
                     <li><codeph>&lt;TextRegion primaryLanguage="German"
-                        secondaryLanguage="Latin"></codeph><fig><title>Textregion mit zwei Sprachen</title><desc><xref scope="external"
-                            href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
-                            format="html">nn_auszug_1701_061.xml</xref></desc><image href="images/sprache_region2.png"
-                        id="image_axl_hsy_l5b" scale="50"/></fig></li>
+                        secondaryLanguage="Latin"></codeph><fig>
+                        <title>Textregion mit zwei Sprachen</title>
+                        <desc><xref scope="external"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
+                                format="html">nn_auszug_1701_061.xml</xref></desc>
+                        <image href="images/sprache_region2.png" id="image_axl_hsy_l5b" scale="40"/>
+                    </fig></li>
             </ul>
         </section>
         <section>
             <title>TextLine : Zeile</title>
             <ul id="ul_qnl_jty_l5b">
                 <li><codeph>&lt;TextLine primaryLanguage="Latin"></codeph>
-                    <fig><title>TextLine mit einer Sprache</title><desc><xref scope="external"
-                        href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
-                        format="html">nn_auszug_1701_061.xml</xref></desc><image href="images/sprache_line1.png" id="image_td3_bsy_l5b" scale="50"/></fig>
+                    <fig>
+                        <title>TextLine mit einer Sprache</title>
+                        <desc><xref scope="external"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
+                                format="html">nn_auszug_1701_061.xml</xref></desc>
+                        <image href="images/sprache_line1.png" id="image_td3_bsy_l5b" scale="40"/>
+                    </fig>
                 </li>
                 <li><codeph>&lt;TextLine primaryLanguage="Latin"></codeph>
                     <fig>
@@ -110,7 +121,7 @@
                         <desc><xref scope="external"
                                 href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
                                 format="html">nn_auszug_1701_061.xml</xref></desc>
-                        <image href="images/sprache_line.png" id="image_mvz_sqy_l5b" scale="50"/>
+                        <image href="images/sprache_line.png" id="image_mvz_sqy_l5b" scale="40"/>
                     </fig>
                     <note type="remember">Im Beispiel ist zu sehen, dass sowohl deutschsprachige als
                         auch lateinischsprachige Worte in der Zeile vorhanden sind. Es wird nur die
@@ -122,9 +133,13 @@
         <section>
             <title>Word : Wort</title>
             <p><codeph>&lt;Word language="Latin"></codeph></p>
-            <fig><title>Word in Latein</title><desc><xref scope="external"
-                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
-                format="html">nn_auszug_1701_061.xml</xref></desc><image href="images/sprache_word.png" id="image_ekp_kry_l5b" scale="50"/></fig>
+            <fig>
+                <title>Word in Latein</title>
+                <desc><xref scope="external"
+                        href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/nn_auszug_1701/GT-PAGE/nn_auszug_1701_061.xml"
+                        format="html">nn_auszug_1701_061.xml</xref></desc>
+                <image href="images/sprache_word.png" id="image_ekp_kry_l5b" scale="30"/>
+            </fig>
         </section>
         
     </body>
