--- a/en/ocrd_ocrd.ditamap
+++ b/en/ocrd_ocrd.ditamap
@@ -42,6 +42,7 @@
             <topicref href="trans/tr_level_2_4.dita"/>
             <topicref href="trans/tr_level_3_4.dita"/>
         </topicref>
+        <topicref href="trans/sprache.dita"/>
         <topicref href="trans/trSchreibweisen.dita">
             <topicref href="trans/trSchreibungIJ.dita">
                 <topicref href="trans/level_1_2.dita"/>
