--- a/en/trans/lyLeserichtung.dita
+++ b/en/trans/lyLeserichtung.dita
@@ -3,11 +3,11 @@
 <topic id="lyLeserichtung">
     <title>ReadingOrder</title>
     <body>
-        <p>In order not to break content and formal connections, regions on a page are ordered and
-            grouped with a ReadingOrder (reading direction). A ReadingOrder exists exclusively
-            between <b>regions</b>. A ReadingOrder is used to define an order of regions. The
-            reading direction in a line is only determined by the order of the individual Word
-            elements, an explicit marking is not provided.  </p>
+        <p>In order not to break content and formal connections, regions on <b>a page</b> are
+            ordered and grouped with a ReadingOrder (reading direction). A ReadingOrder exists
+            exclusively between <b>regions</b>. A ReadingOrder is used to define an order of
+            regions. The reading direction in a line is only determined by the order of the
+            individual Word elements, an explicit marking is not provided. </p>
         <section>
             <title>Defining the reading direction</title>
             <p>The definition is pragmatic. That means:</p>
@@ -40,8 +40,24 @@
 &lt;/ReadingOrder></codeblock></li>
                         <li><xref scope="external"
                                 href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml"
-                                format="html">Example for a ReadingOrder/OrderedGroup</xref>
-                        </li>
+                                format="html">Example for a ReadingOrder/OrderedGroup</xref></li>
+                        <li>
+                            <fig>
+                                <title>left side</title>
+                                <desc><xref scope="external" format="html"
+                                    href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0012.xml">erasmus_testamenti_1523_0012.xml</xref></desc>
+                                <image href="images/lyLeserichtung_links.png"
+                                    id="image_l22_w2n_ytb" scale="50"/>
+                            
+                            </fig>
+                            </li>
+                        <li>
+                            <fig><title>right side</title>
+                                <desc><xref scope="external" format="html"
+                                    href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/erasmus_testamenti_1523/GT-PAGE/erasmus_testamenti_1523_0013.xml">erasmus_testamenti_1523_0013.xml</xref></desc>
+                                <image href="images/lyLeserichtung_rechts.png"
+                                    id="image_ncr_hfn_ytb" scale="50"/>
+                            </fig></li>
                     </ul></li>
                 <li>If the elements are of the same type (e.g. advertising) and can stand alone, the
                     reading direction is of the "unordered" type. In this case, the
@@ -55,12 +71,68 @@
   &lt;/UnorderedGroup>
 &lt;/ReadingOrder></codeblock></li>
                     </ul></li>
+                <li>In some cases, a mixture of <i>unordered</i> and <i>ordered</i> is also
+                    possible. Within an advertisement section of a newspaper, the individual
+                    advertisements are <i>unordered</i>. But within the advertisement it can be
+                    assumed that among other things paragraphs, graphics are in <i>ordered
+                        relations</i> to each other.<ul id="ul_pjh_yyr_n5b">
+                            <li>
+                                <codeblock id="codeblock_f15_dz4_ytb" outputclass="language-xml">&lt;ReadingOrder>
+	&lt;UnorderedGroup id="ab1">
+		&lt;UnorderedGroup id="ug19">
+			&lt;OrderedGroup id="og19">
+				&lt;OrderedGroupIndexed id="g19" index="0">
+					&lt;RegionRefIndexed regionRef="r2" index="0"/>
+					&lt;RegionRefIndexed regionRef="r71" index="1"/>
+				&lt;/OrderedGroupIndexed>
+			&lt;/OrderedGroup>
+		&lt;/UnorderedGroup>
+		&lt;UnorderedGroup id="ug6">
+			&lt;OrderedGroup id="og6">
+				&lt;OrderedGroupIndexed id="g6" index="1">
+					&lt;RegionRefIndexed regionRef="r4" index="0"/>
+					&lt;RegionRefIndexed regionRef="r5" index="1"/>
+				&lt;/OrderedGroupIndexed>
+			&lt;/OrderedGroup>
+			&lt;/UnorderedGroup>
+		&lt;/UnorderedGroup>
+	&lt;/ReadingOrder>
+</codeblock>                                
+                            </li>
+                    </ul></li>
+                <li>
+                    <fig id="fig_zx3_wzr_n5b">
+                        <title>Mixed form of unordered and ordered reading order</title>
+                        <desc><xref scope="external" format="html"
+                                href="https://github.com/tboenig/gt-guideline-examples/blob/main/data/werbung/GT-PAGE/werbung_unordered.xml"
+                                >werbung_unordered.xml</xref></desc>
+                        <image href="images/lyLeserichtung_misch.jpg" scale="50"
+                            id="image_yxj_y2p_ytb"/>
+                    </fig>
+                </li>
             </ul>
         </section>
         <example><title>image examples</title>
-<p><image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb"/></p>
-<p><image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb"/></p>
-            <p><image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb"/></p></example>
+            <ul id="ul_uhs_bxz_l5b">
+                <li>
+                    <fig id="fig_v23_d1s_n5b">
+                        <title>Multiple column sections</title>
+                        <image href="images/lyLeserichtung.png" id="image_oqf_ld4_4bb" scale="60"/>
+                    </fig>
+                </li>
+                <li>
+                    <fig id="fig_w23_d1s_n5b">
+                        <title>Right page with marginalia</title>
+                        <image href="images/lyLeserichtung2.png" id="image_y5g_cf4_4bb" scale="60"/>
+                    </fig>
+                </li>
+                <li>
+                    <fig id="fig_x23_d1s_n5b">
+                        <title>Columns with images</title>
+                        <image href="images/lyLeserichtung3.png" id="image_n43_qk4_4bb" scale="60"/>
+                    </fig>
+                </li>
+            </ul></example>
     </body>
     <related-links>
         <link href="../../en/trans/structur_gtlevel1.dita"/>
