update page margin

--- a/en/trans/lyRand.dita
+++ b/en/trans/lyRand.dita
@@ -3,10 +3,10 @@
 <topic id="lyRand">
     <title>Page Margin</title>
     <body>
-        <p>The page margin delimits the entire page (including column headers, page numbers and
-            sheet signatures) from parts that do not belong to the text (including handwritten
-            additions) or the whitespace. We encourage to just mark the page margin, not the print
-            space. </p>
+        <p>The page margin usually delimits the column headers, the page number, the paragraphs, and
+            even the sheet signature mark from parts that do not belong to the text, such as
+            handwritten additions or the whitespace. Marking the page margin is preferable to the
+            type area.</p>
         <p>
             <fig>
                 <title>Example: page margin</title>
