update Level and Table (only german version)

--- a/de/trans/trLevels.dita
+++ b/de/trans/trLevels.dita
@@ -10,13 +10,13 @@
             gegeben wird. Jedoch einzelne Elemente und Regionen können vereinfacht oder komplex und
             detailreich wiedergegeben werden. In welchem Umfang dies erfolgt, richtet sich u. a.
             nach dem Zweck, dem Gebrauch, dem Umfang, der Finanzierbarkeit, der technischen
-            Verfügbarkeit und … Das bedeutet, das in vielen Fällen eine <b>Interpretation von
-                einzelnen typographischen und graphematischen Phänomenen</b> vorgenommen wird. Damit
-            die getroffenen Interpretationen nachvollziehbar werden, kann der GT nach entsprechenden
-                <b>Level der Wiedergabe der Vorlage</b> transkribiert werden oder bei vorhandenem GT
-            eingeteilt oder evaluiert werden. Eine Beschreibung oder Erläuterung der Level finden
-            sich in diesen Richtlinien an verschiedenen Stellen. Die folgende Übersicht listet diese
-            Level-Beschreibungen auf.</p>
+            Verfügbarkeit Be- und Verarbeitungswerkzeugen. Das bedeutet, das in vielen Fällen eine
+                <b>Interpretation von einzelnen typographischen und graphematischen Phänomenen</b>
+            vorgenommen wird. Damit die getroffenen Interpretationen nachvollziehbar werden, kann
+            der GT nach einem entsprechenden <b>Level der Wiedergabe der Vorlage</b> transkribiert
+            werden oder bei vorhandenem GT eingeteilt oder evaluiert werden. Eine Beschreibung oder
+            Erläuterung der Level finden sich in diesen Richtlinien an verschiedenen Stellen. Die
+            folgende Übersicht listet diese Level-Beschreibungen auf.</p>
         <note>siehe: Zu Grundwahrheit="ground truth, n.". im Oxford English Dictionary (OED) Online.
             September 2021. Oxford University Press. <xref
                 href="https://www.oed.com/view/Entry/249130?isAdvanced=false%26result=1%26rskey=f84Hc3%26"
